# cookiecutter-python-package

./: README.md  cookiecutter.json
{{cookiecutter.app_name}}/: LICENSE  README.rst  pyproject.toml  tox.ini
{{cookiecutter.app_name}}/tests/: test_import.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: __init__.py
